--- a/index.html
+++ b/index.html
@@ -1,59 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--
+      This <head> section contains metadata about the page.
+      It's not visible to the user on the page itself, but it's important for browsers and search engines.
+    -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>...</title>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <!-- Stylesheet -->
+    
+    <!-- This is the title that will appear in the browser tab -->
+    <title>Scout Nelson | Digital PR & eCommerce Strategist</title>
+    
+    <!-- This line links to your future stylesheet. We will create this file later. -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <!--
+      The <header> typically contains the site logo, navigation, and other introductory content.
+    -->
     <header>
-        <nav>
-    <a href="index.html" class="logo">Scout Nelson</a>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+        <!-- We will add a logo and navigation menu here in a later step -->
     </header>
 
+    <!--
+      The <main> element represents the dominant content of the page.
+    -->
     <main>
-        <!-- Hero Section -->
+        <!-- 
+          This is the Hero Area. It's the first thing visitors see and should
+          clearly communicate what the website is about.
+        -->
         <section class="hero">
-            <h1>Building Bridges of Trust for eCommerce Brands</h1>
-            <p>I connect great brands with their customers through authentic, expert reviews and data-driven digital PR.</p>
-            <a href="#" class="cta-button">Discover My Approach</a>
+            <h1>Building Bridges of Trust for Your Brand</h1>
+            <p>
+                A Digital PR and Outreach Strategist helping e-commerce businesses connect with their audience through authentic, expert reviews.
+            </p>
+            <!-- We can add a Call-to-Action button here later -->
         </section>
 
-        <!-- Services Overview Section -->
-        <section class="services-overview">
-            <h2>How I Help</h2>
-            <div class="service-item">
-                <h3>Expert Blogger & Journalist Vetting</h3>
-                <p>Finding genuine subject matter experts to ensure authentic and credible product reviews.</p>
-            </div>
-            <div class="service-item">
-                <h3>High-Impact SEO & PR Strategy</h3>
-                <p>Using tools like Ahrefs to analyze the competitive landscape and build powerful, data-informed strategies.</p>
-            </div>
-            <div class="service-item">
-                <h3>Full-Service Product Seeding</h3>
-                <p>Managing the entire outreach and product seeding process to facilitate honest, unpaid reviews.</p>
-            </div>
-        </section>
+        <!-- More content sections like "About", "Services", and "Contact" will be added here later -->
     </main>
 
+    <!--
+      The <footer> contains information that appears at the bottom of every page,
+      like copyright notices or contact information.
+    -->
     <footer>
-        <p>© 2025 Scout Lewis Nelson. All Rights Reserved.</p>
-        <p>Digital PR & Outreach Strategist</p>
+        <p>© 2024 Scout Lewis Nelson. All Rights Reserved.</p>
     </footer>
 
 </body>
