--- a/index.html
+++ b/index.html
@@ -1,51 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--
-      This <head> section contains metadata about the page.
-      It's not visible to the user on the page itself, but it's important for browsers and search engines.
-    -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- This is the title that will appear in the browser tab -->
     <title>Scout Nelson | Digital PR & eCommerce Strategist</title>
-    
-    <!-- This line links to your future stylesheet. We will create this file later. -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!--
-      The <header> typically contains the site logo, navigation, and other introductory content.
-    -->
+    <!-- === UPDATED HEADER SECTION === -->
     <header>
-        <!-- We will add a logo and navigation menu here in a later step -->
+        <div class="header-container">
+            <!-- Site Title/Logo -->
+            <a href="index.html" class="logo">Scout Nelson</a>
+
+            <!-- Navigation Menu -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Services</a></li> <!-- Placeholder Link -->
+                    <li><a href="#">Contact</a></li>  <!-- Placeholder Link -->
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <!--
-      The <main> element represents the dominant content of the page.
-    -->
     <main>
-        <!-- 
-          This is the Hero Area. It's the first thing visitors see and should
-          clearly communicate what the website is about.
-        -->
         <section class="hero">
             <h1>Building Bridges of Trust for Your Brand</h1>
             <p>
                 A Digital PR and Outreach Strategist helping e-commerce businesses connect with their audience through authentic, expert reviews.
             </p>
-            <!-- We can add a Call-to-Action button here later -->
         </section>
-
-        <!-- More content sections like "About", "Services", and "Contact" will be added here later -->
     </main>
 
-    <!--
-      The <footer> contains information that appears at the bottom of every page,
-      like copyright notices or contact information.
-    -->
     <footer>
         <p>© 2024 Scout Lewis Nelson. All Rights Reserved.</p>
     </footer>
