--- a/about.html
+++ b/about.html
@@ -9,22 +9,29 @@
 <body>
 
     <!-- === UPDATED HEADER SECTION === -->
-    <header>
-        <div class="header-container">
-            <!-- Site Title/Logo -->
-            <a href="index.html" class="logo">Scout Nelson</a>
+<header>
+    <div class="header-container">
+        <!-- Site Title/Logo -->
+        <a href="index.html" class="logo">Scout Nelson</a>
 
-            <!-- Navigation Menu -->
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#">Services</a></li> <!-- Placeholder Link -->
-                    <li><a href="#">Contact</a></li>  <!-- Placeholder Link -->
-                </ul>
-            </nav>
-        </div>
-    </header>
+        <!-- Navigation Menu -->
+        <nav class="nav-links"> <!-- Added a class for styling -->
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Services</a></li> <!-- Placeholder Link -->
+                <li><a href="#">Contact</a></li>  <!-- Placeholder Link -->
+            </ul>
+        </nav>
+
+        <!-- Hamburger Menu Icon -->
+        <button class="hamburger-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
+    </div>
+</header>
 
     <main>
         <section class="about-content">
