--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <title>About | Scout Lewis Nelson</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
 <header>
     <div class="header-container">
         <!-- Site Title/Logo -->
-        <a href="index.html" class="logo">Scout Nelson</a>
+        <a href="index.html" class="logo"><img src="images/logo.png" alt="180 Review Logo"></a>
 
         <!-- Navigation Menu -->
         <nav class="nav-links"> <!-- Added a class for styling -->
@@ -36,7 +37,7 @@
     <main>
         <section class="about-content">
             <h1>About Me</h1>
-            <div class="profile-image-placeholder"></div>
+            <img src="images/scout-profile.jpg" alt="Headshot of Scout Lewis Nelson" class="profile-image-placeholder">
             <h2>Hey, I’m Scout.</h2>
             <p><strong>Long story short: I help good brands earn real trust through honest reviews by real people. No gimmicks. No paid fluff. Just human-to-human storytelling, amplified by smart strategy.</strong></p>
             <p>I kind of fell into this line of work by accident.</p>
