--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <title>Scout Nelson | Digital PR & eCommerce Strategist</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
 <header>
     <div class="header-container">
         <!-- Site Title/Logo -->
-        <a href="index.html" class="logo">Scout Nelson</a>
+        <a href="index.html" class="logo"><img src="images/logo.png" alt="180 Review Logo"></a>
 
         <!-- Navigation Menu -->
         <nav class="nav-links"> <!-- Added a class for styling -->
