--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Services</a></li> <!-- Placeholder Link -->
-                <li><a href="#">Contact</a></li>  <!-- Placeholder Link -->
+                <li><a href="contact.html">Contact</a></li> 
             </ul>
         </nav>
 
