--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <section class="contact-section">
             <div class="contact-container">
                 <h1>Get In Touch</h1>
-                <p>Have a question, a project proposal, or just want to say hi? Fill out the form below.</p>
+                <p>Have a question, a project proposal, or just want to say hi? Fill out the form below or email me at Scout@180reviewteam.com</p>
 
                 <!-- 
                   This form is set up for Netlify.
