--- a/index.html
+++ b/index.html
@@ -41,6 +41,53 @@
                 A Digital PR and Outreach Strategist helping e-commerce businesses connect with their audience through authentic, expert reviews.
             </p>
         </section>
+        <!-- === Services Section === -->
+<section class="services-section">
+    <div class="services-container">
+        <h2>How I Work</h2>
+        <p class="section-subtitle">My process is built on a foundation of strategy, curation, and trust.</p>
+        
+        <div class="services-grid">
+            
+            <!-- Card 1: Strategic Outreach Planning -->
+            <div class="service-card">
+                <!-- Icon: Compass -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <polygon points="16.24 7.76 14.12 14.12 7.76 16.24 9.88 9.88 16.24 7.76"></polygon>
+                </svg>
+                <h3>Strategic Outreach Planning</h3>
+                <p>I dive deep into the competitive landscape using tools like Ahrefs to build a high-impact strategy, pinpointing the exact voices where a genuine endorsement will matter most.</p>
+            </div>
+
+            <!-- Card 2: Expert Vetting & Curation -->
+            <div class="service-card">
+                <!-- Icon: Magnifying Glass with Checkmark -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
+                    <path d="M21 21l-6 -6"></path>
+                    <path d="M12 5l-1.5 3l-3.5 .5l2.5 2.5l-.5 3.5l3 -1.5l3 1.5l-.5 -3.5l2.5 -2.5l-3.5 -.5z"></path>
+                </svg>
+                <h3>Expert Vetting & Curation</h3>
+                <p>This is my "no fluff" zone. I personally vet bloggers, journalists, and creators for their authenticity and trusted voice, going far beyond simple follower counts.</p>
+            </div>
+
+            <!-- Card 3: Full-Service Product Seeding -->
+            <div class="service-card">
+                <!-- Icon: Package/Box -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="16.5" y1="9.4" x2="7.5" y2="4.21"></line>
+                    <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                    <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                    <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                </svg>
+                <h3>Full-Service Product Seeding</h3>
+                <p>From the initial pitch to shipping logistics and follow-up, I personally manage the entire product seeding process to facilitate an honest, unpaid review experience.</p>
+            </div>
+
+        </div>
+    </div>
+</section>
     </main>
 
     <footer>
